# PolymarketBot

./: .env.example  .gitignore  BROWSER-TEST-REPORT.md  README.md  phases.md  pyproject.toml
.claude/: CLAUDE.md
.claude/plan-hardened/: inter-slice-gate-1-2.json
.claude/plans/: vorrei-apportare-dei-miglioramenti-bubbly-squirrel.md
.claude/prompts/: P1_demo_mode.md  P2_fonti_reali.md  PD_intelligence_knowledge_persistence.md  PE_integration_tests.md  PF_simulated_trading_realism.md  PG_browser_test_session.md
.claude/retros/: W4-orchestration-retro.md
.claude/tasks/: lessons.md  todo.md
app/: main.py
app/backtesting/: data_loader.py  engine.py  reporter.py  simulator.py
app/clients/: gdelt_client.py  institutional_client.py  llm_client.py  manifold_client.py  polymarket_clob.py  polymarket_leaderboard.py  polymarket_rest.py  polymarket_subgraph.py  polymarket_trades.py  polymarket_ws.py  rss_client.py  telegram_client.py
app/core/: config.py  dependencies.py  logging.py  yaml_config.py
app/execution/: dry_run.py  engine.py  executor.py  (+5 more)
config/: config.example.yaml
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx-dss.conf  nginx.conf
docs/: API-REFERENCE.md  ARCHITECTURE.md  HEALTH-REPORT.md  Implementation_PLAN.md
logs/: REFACTOR-LOG.md
scripts/: build_calibration.py  debug_edge_zero.py  fetch_historical.py  fix_backlinks.py  fix_vault.py  ingest_manifold.py  ingest_resolutions.py  populate_vault.py  seed_patterns.py  setup_vault.py  update_vault.py
static/: index.html
tests/: conftest.py  test_main_lifespan.py
(+181 files in other folders)
