[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Autonomous intelligence and value assessment system for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "websockets",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "pyyaml",
    "feedparser",
    "py-clob-client",
    "python-telegram-bot",
    "aiofiles",
    "aiosqlite",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"app/core/logging.py" = ["A005"]
"app/models/signal.py" = ["A005"]
"tests/**" = ["S105", "S106", "S107"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
